<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="todo">TODO</string>
    <string name="save_history">Save History</string>
    <string name="hapus">Hapus</string>
    <string name="delete">Delete</string>
    <string name="save_analyze_data">Save Analyze Data</string>
    <string name="news_image">News Image</string>
</resources>