<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".view.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="12dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_place_holder" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BodyTextStyle"
                android:layout_gravity="center_horizontal"
                android:text="@string/result"
                android:layout_margin="10dp"
                android:fontFamily="@font/roboto_regular"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/saveHistory"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/save_analyze_data"
            android:backgroundTint="@color/secondaryColor"
            android:textColor="@color/buttonTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/poppins_regular" />
    </LinearLayout>
</ScrollView>
